--- a/src/design/base.css
+++ b/src/design/base.css
@@ -1,4 +1,12 @@
-@import './theme.scss';
+html[data-theme='light'] .global-theme {
+  background-color: #fff;
+  color: #000000;
+}
+
+html[data-theme='dark'] .global-theme {
+  background-color: #293146;
+  color: #ffffffa6;
+}
 
 html {
   overflow: hidden;
