--- a/src/design/base.css
+++ b/src/design/base.css
@@ -25,3 +25,18 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.may-container {
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+
+.may-title {
+  @apply text-lg;
+  line-height: 60px;
+}
+
+.el-button.is-text {
+  padding: 8px;
+}
