1、调整格式化代码换行最大长度。2、调整cookie超时，死循环调用获取菜单。3、调整了一些样式。4、新增了新增菜单功能。5、新建角色管理页面

--- a/src/design/base.css
+++ b/src/design/base.css
@@ -27,14 +27,15 @@ body {
 }
 
 .may-container {
-  height: 100%;
   box-sizing: border-box;
   background-color: #fff;
+  @apply m-4;
 }
 
 .may-title {
-  @apply text-lg;
+  @apply text-lg w-full h-16 font-semibold;
   line-height: 60px;
+  background-color: #fff;
 }
 
 .el-button.is-text {
