--- a/src/design/base.scss
+++ b/src/design/base.scss
@@ -28,6 +28,10 @@ body {
   line-height: 60px;
 }
 
+.bg-style2 {
+  background-color: var(--default-bg-color2);
+}
+
 .may-condition {
   @apply p-4;
 }
