新增首页模块管理拖拽功能

--- a/src/design/theme.scss
+++ b/src/design/theme.scss
@@ -13,6 +13,8 @@ html {
     --default-color: #ffffffa6;
     --default-bor-color: #6a6a6a;
     --default-card-bgcolor: #1d1e1f;
+    --skeleton-bg: #2e2e2e;
+    --skeleton-hl: #363636;
   }
 }
 
