问题修复：修复domdomControls报错问题，调整elementplus整体样式

--- a/src/design/theme.scss
+++ b/src/design/theme.scss
@@ -4,7 +4,7 @@ html {
     --default-bg-color2: #f5f5f5;
     --default-color: #000000;
     --default-bor-color: #8e8472;
-    --default-card-bgcolor: #ffffff;
+    --default-card-bgcolor: #f5f5f5;
   }
 
   &[data-theme='dark'] {
