--- a/src/design/home.scss
+++ b/src/design/home.scss
@@ -1,6 +1,6 @@
 .home-container {
   min-height: 370px;
-  background-color: var(--default-bg-color);
+  background-color: var(--default-card-bgcolor);
   .home-toolbar {
     height: 40px;
     line-height: 40px;
